# Noxar

./: .gitignore  AGENTS.md  main.py  requirements.txt  run_backend.bat  test_server.py
.agent/skills/code-diagnostics/: instructions.md
backend/: clients.py  config.py  main.py  requirements.txt  routes.py  services.py  test_client.py
docs/: index.html
extension/: content.js  manifest.json  popup.html  popup.js
noxar-desktop-core/: index.html  installer.nsh  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.js
noxar-desktop-core/src/: index.css  main.js
public-landing/: index.html
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
