[package]
name = "noxar-desktop"
version = "1.0.0"
description = "NOXAR Desktop Engine"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["clipboard", "global-shortcut", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
